# DPCS

./: .gitignore  README.md  bench_results.jsonl  grid_results.csv  pyproject.toml  results.jsonl  runs.jsonl  runs.prev.jsonl  summary.csv
bench/: bench_dpcs.py  bench_static_dpcs.py  overhead_probe.py  parse_jsonl.py
examples/: auto_sweep_transformer.py  bench_dpcs.py  bench_dpcs_adaptive.py  bench_transformer_dpcs.py  bench_transformer_maxfit.py  check_correctness_and_speed.py  compare_ckpt_modes.py  dpcs_runner.py  hf_runner_cli.py  hf_runner_lm.py  minimal_train.py  one_step_probe.py  one_step_probe_transformer.py  probe_real_transformer.py  runner.py  smoke_block_checkpointing_pure.py  smoke_dpcs.py  smoke_dpcs_block_ckpt.py  smoke_step1.py  smoke_step2_ckpt.py  summarize_jsonl.py  test_dpcs_smoke.py
results/20250916-125451/: metrics.jsonl  summary.csv
results/20250916-140122/: metrics.jsonl  summary.csv
results/20250916-142610/: metrics.jsonl  summary.csv
runs/: bench_mlp_adamw.jsonl  bench_mlp_sgd.jsonl  bench_transformer.jsonl  dpcs_probe.jsonl  dpcs_probe_seq3072.jsonl
src/dpcs/: __init__.py  (+7 more)
tests/: bench.py  bench_distrib.py  conftest.py  test_amp_overflow.py  test_bench_smoke.py  test_checkpointing_regression.py  test_checkpointing_regression_single_model.py  test_checkpointing_transformer.py  test_ckpt_delegate.py  test_compile_mode.py  test_dist_broadcast.py  test_dpcs.py  test_dpcs_core.py  test_fp8_precision.py  test_precision_policy.py  test_precision_scheduler.py  test_scheduler_distrib.py  test_stats_autotune.py  test_telemetry_schema.py
(+8 files in other folders)
