[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpcs"
version = "0.1.0"
description = "Dynamic Precision + Checkpointing Scheduler for PyTorch (FP32/FP16/FP8 + selective activation checkpointing)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = ["torch>=2.5"]

# Optional bits: install with `pip install dpcs[fp8]` or `dpcs[signals]`
[project.optional-dependencies]
fp8 = ["transformer-engine"]            # NVIDIA FP8 backend (optional). :contentReference[oaicite:1]{index=1}
signals = ["backpack-for-pytorch"]      # Variance / diag-GGN (optional). :contentReference[oaicite:2]{index=2}
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/yourname/dpcs"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
